raylib-sys/raylib.h

typedef enum
{
    false,
    true
} bool;
// Vector2 type
typedef struct Vector2
{
    float x;
    float y;
} Vector2;
// Vector3 type
typedef struct Vector3
{
    float x;
    float y;
    float z;
} Vector3;
// Vector4 type
typedef struct Vector4
{
    float x;
    float y;
    float z;
    float w;
} Vector4;
// Matrix type (OpenGL style 4x4 - right handed, column major)
typedef struct Matrix
{
    float m0, m4, m8, m12;
    float m1, m5, m9, m13;
    float m2, m6, m10, m14;
    float m3, m7, m11, m15;
} Matrix;
// Color type, RGBA (32bit)
typedef struct Color
{
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
} Color;
// Texture2D type
// NOTE: Data stored in GPU memory
typedef struct Texture2D
{
    unsigned int id; // OpenGL texture id
    int width;       // Texture base width
    int height;      // Texture base height
    int mipmaps;     // Mipmap levels, 1 by default
    int format;      // Data format (PixelFormat type)
} Texture2D;
// RenderTexture2D type, for texture rendering
typedef struct RenderTexture2D
{
    unsigned int id;   // OpenGL Framebuffer Object (FBO) id
    Texture2D texture; // Color buffer attachment texture
    Texture2D depth;   // Depth buffer attachment texture
    bool depthTexture; // Track if depth attachment is a texture or renderbuffer
} RenderTexture2D;
// Camera type, defines a camera position/orientation in 3d space
typedef struct Camera3D
{
    Vector3 position; // Camera position
    Vector3 target;   // Camera target it looks-at
    Vector3 up;       // Camera up vector (rotation over its axis)
    float fovy;       // Camera field-of-view apperture in Y (degrees) in perspective, used as near plane width in orthographic
    int type;         // Camera type, defines projection type: CAMERA_PERSPECTIVE or CAMERA_ORTHOGRAPHIC
} Camera3D;
// Ray type (useful for raycast)
typedef struct Ray
{
    Vector3 position;  // Ray position (origin)
    Vector3 direction; // Ray direction
} Ray;
// Callbacks to be implemented by users
typedef void (*TraceLogCallback)(int logType, const char *text, va_list args);
    RLAPI void EndMode2D(void);                          // Ends 2D mode with custom camera
    RLAPI void BeginMode3D(Camera3D camera);             // Initializes 3D mode with custom camera (3D)
    RLAPI void EndMode3D(void);                          // Ends 3D mode and returns to default 2D orthographic mode
    RLAPI void BeginTextureMode(RenderTexture2D target); // Initializes render texture for drawing
    RLAPI void EndTextureMode(void);                     // Ends drawing to render texture
    // Screen-space-related functions
    RLAPI Ray GetMouseRay(Vector2 mousePosition, Camera camera);     // Returns a ray trace from mouse position
    RLAPI Vector2 GetWorldToScreen(Vector3 position, Camera camera); // Returns the screen space position for a 3d world space position
    RLAPI Matrix GetCameraMatrix(Camera camera);                     // Returns camera transform matrix (view matrix)
    // timing-related functions
    RLAPI void SetTargetFPS(int fps); // Set target FPS (maximum)
    RLAPI int GetFPS(void);           // Returns current FPS
    RLAPI float GetFrameTime(void);   // Returns time in seconds for last frame drawn
    RLAPI double GetTime(void);       // Returns elapsed time in seconds since InitWindow()
    // Color-related functions
    RLAPI int ColorToInt(Color color);          // Returns hexadecimal value for a Color
    RLAPI Vector4 ColorNormalize(Color color);  // Returns color normalized as float [0..1]
    RLAPI Vector3 ColorToHSV(Color color);      // Returns HSV values for a Color
    RLAPI Color ColorFromHSV(Vector3 hsv);      // Returns a Color from HSV values
    RLAPI Color GetColor(int hexValue);         // Returns a Color struct from hexadecimal value
    RLAPI Color Fade(Color color, float alpha); // Color fade-in or fade-out, alpha goes from 0.0f to 1.0f
    // Misc. functions
    RLAPI void SetConfigFlags(unsigned char flags);            // Setup window configuration flags (view FLAGS)
    RLAPI void SetTraceLogLevel(int logType);                  // Set the current threshold (minimum) log level
    RLAPI void SetTraceLogExit(int logType);                   // Set the exit threshold (minimum) log level
    RLAPI void SetTraceLogCallback(TraceLogCallback callback); // Set a trace log callback to enable custom logging
    RLAPI void TraceLog(int logType, const char *text, ...);   // Show trace log messages (LOG_DEBUG, LOG_INFO, LOG_WARNING, LOG_ERROR)
    RLAPI void TakeScreenshot(const char *fileName);           // Takes a screenshot of current screen (saved a .png)
    RLAPI int GetRandomValue(int min, int max);                // Returns a random value between min and max (both included)
    // Files management functions
    RLAPI bool FileExists(const char *fileName);                       // Check if file exists
    RLAPI bool IsFileExtension(const char *fileName, const char *ext); // Check file extension
    RLAPI const char *GetExtension(const char *fileName);              // Get pointer to extension for a filename string
    RLAPI const char *GetFileName(const char *filePath);               // Get pointer to filename for a path string
    RLAPI const char *GetFileNameWithoutExt(const char *filePath);     // Get filename string without extension (memory should be freed)
    RLAPI const char *GetDirectoryPath(const char *fileName);          // Get full path for a given fileName (uses static string)
    RLAPI const char *GetWorkingDirectory(void);                       // Get current working directory (uses static string)
    RLAPI char **GetDirectoryFiles(const char *dirPath, int *count);   // Get filenames in a directory path (memory should be freed)
    RLAPI void ClearDirectoryFiles(void);                              // Clear directory files paths buffers (free memory)
    RLAPI bool ChangeDirectory(const char *dir);                       // Change working directory, returns true if success
    RLAPI bool IsFileDropped(void);                                    // Check if a file has been dropped into window
    RLAPI char **GetDroppedFiles(int *count);                          // Get dropped files names (memory should be freed)
    RLAPI void ClearDroppedFiles(void);                                // Clear dropped files paths buffer (free memory)
    RLAPI long GetFileModTime(const char *fileName);                   // Get file modification time (last write time)
    // Persistent storage management
    RLAPI void StorageSaveValue(int position, int value); // Save integer value to storage file (to defined position)
    RLAPI int StorageLoadValue(int position);             // Load integer value from storage file (from defined position)
    RLAPI void OpenURL(const char *url); // Open URL with default system browser (if available)
    //------------------------------------------------------------------------------------
    // Input Handling Functions (Module: core)
    //------------------------------------------------------------------------------------

    // Input-related functions: keyboard
    RLAPI bool IsKeyPressed(int key);  // Detect if a key has been pressed once
    RLAPI bool IsKeyDown(int key);     // Detect if a key is being pressed
    RLAPI bool IsKeyReleased(int key); // Detect if a key has been released once
    RLAPI bool IsKeyUp(int key);       // Detect if a key is NOT being pressed
    RLAPI int GetKeyPressed(void);     // Get latest key pressed
    RLAPI void SetExitKey(int key);    // Set a custom key to exit program (default is ESC)
    // Input-related functions: gamepads
    RLAPI bool IsGamepadAvailable(int gamepad);                  // Detect if a gamepad is available
    RLAPI bool IsGamepadName(int gamepad, const char *name);     // Check gamepad name (if available)
    RLAPI const char *GetGamepadName(int gamepad);               // Return gamepad internal name id
    RLAPI bool IsGamepadButtonPressed(int gamepad, int button);  // Detect if a gamepad button has been pressed once
    RLAPI bool IsGamepadButtonDown(int gamepad, int button);     // Detect if a gamepad button is being pressed
    RLAPI bool IsGamepadButtonReleased(int gamepad, int button); // Detect if a gamepad button has been released once
    RLAPI bool IsGamepadButtonUp(int gamepad, int button);       // Detect if a gamepad button is NOT being pressed
    RLAPI int GetGamepadButtonPressed(void);                     // Get the last gamepad button pressed
    RLAPI int GetGamepadAxisCount(int gamepad);                  // Return gamepad axis count for a gamepad
    RLAPI float GetGamepadAxisMovement(int gamepad, int axis);   // Return axis movement value for a gamepad axis
    // Input-related functions: mouse
    RLAPI bool IsMouseButtonPressed(int button);          // Detect if a mouse button has been pressed once
    RLAPI bool IsMouseButtonDown(int button);             // Detect if a mouse button is being pressed
    RLAPI bool IsMouseButtonReleased(int button);         // Detect if a mouse button has been released once
    RLAPI bool IsMouseButtonUp(int button);               // Detect if a mouse button is NOT being pressed
    RLAPI int GetMouseX(void);                            // Returns mouse position X
    RLAPI int GetMouseY(void);                            // Returns mouse position Y
    RLAPI Vector2 GetMousePosition(void);                 // Returns mouse position XY
    RLAPI void SetMousePosition(int x, int y);            // Set mouse position XY
    RLAPI void SetMouseOffset(int offsetX, int offsetY);  // Set mouse offset
    RLAPI void SetMouseScale(float scaleX, float scaleY); // Set mouse scaling
    RLAPI int GetMouseWheelMove(void);                    // Returns mouse wheel movement Y
    // Input-related functions: touch
    RLAPI int GetTouchX(void);                 // Returns touch position X for touch point 0 (relative to screen size)
    RLAPI int GetTouchY(void);                 // Returns touch position Y for touch point 0 (relative to screen size)
    RLAPI Vector2 GetTouchPosition(int index); // Returns touch position XY for a touch point index (relative to screen size)
    //------------------------------------------------------------------------------------
    // Gestures and Touch Handling Functions (Module: gestures)
    //------------------------------------------------------------------------------------
    RLAPI void SetGesturesEnabled(unsigned int gestureFlags); // Enable a set of gestures using flags
    RLAPI bool IsGestureDetected(int gesture);                // Check if a gesture have been detected
    RLAPI int GetGestureDetected(void);                       // Get latest detected gesture
    RLAPI int GetTouchPointsCount(void);                      // Get touch points count
    RLAPI float GetGestureHoldDuration(void);                 // Get gesture hold time in milliseconds
    RLAPI Vector2 GetGestureDragVector(void);                 // Get gesture drag vector
    RLAPI float GetGestureDragAngle(void);                    // Get gesture drag angle
    RLAPI Vector2 GetGesturePinchVector(void);                // Get gesture pinch delta
    RLAPI float GetGesturePinchAngle(void);                   // Get gesture pinch angle
    //------------------------------------------------------------------------------------
    // Camera System Functions (Module: camera)
    //------------------------------------------------------------------------------------
    RLAPI void SetCameraMode(Camera camera, int mode); // Set camera mode (multiple camera modes available)
    RLAPI void UpdateCamera(Camera *camera);           // Update camera position for selected mode
    RLAPI void SetCameraPanControl(int panKey);                                                                     // Set camera pan key to combine with mouse movement (free camera)
    RLAPI void SetCameraAltControl(int altKey);                                                                     // Set camera alt key to combine with mouse movement (free camera)
    RLAPI void SetCameraSmoothZoomControl(int szKey);                                                               // Set camera smooth zoom key to combine with mouse (free camera)
    RLAPI void SetCameraMoveControls(int frontKey, int backKey, int rightKey, int leftKey, int upKey, int downKey); // Set camera move controls (1st person and 3rd person cameras)
    //------------------------------------------------------------------------------------
    // Basic Shapes Drawing Functions (Module: shapes)
    //------------------------------------------------------------------------------------

    // Basic shapes drawing functions
    RLAPI void DrawPixel(int posX, int posY, Color color);                                                    // Draw a pixel
    RLAPI void DrawPixelV(Vector2 position, Color color);                                                     // Draw a pixel (Vector version)
    RLAPI void DrawLine(int startPosX, int startPosY, int endPosX, int endPosY, Color color);                 // Draw a line
    RLAPI void DrawLineV(Vector2 startPos, Vector2 endPos, Color color);                                      // Draw a line (Vector version)