raylib-sys/bindings_osx.rs

extern "C" {
    #[link_name = "\u{1}_EndMode2D"]
    pub fn EndMode2D();
}
extern "C" {
    #[link_name = "\u{1}_BeginMode3D"]
    pub fn BeginMode3D(camera: Camera3D);
}
extern "C" {
    #[link_name = "\u{1}_EndMode3D"]
    pub fn EndMode3D();
}
extern "C" {
    #[link_name = "\u{1}_BeginTextureMode"]
    pub fn BeginTextureMode(target: RenderTexture2D);
}
extern "C" {
    #[link_name = "\u{1}_EndTextureMode"]
    pub fn EndTextureMode();
}
extern "C" {
    #[link_name = "\u{1}_GetMouseRay"]
    pub fn GetMouseRay(mousePosition: Vector2, camera: Camera3D) -> Ray;
}
extern "C" {
    #[link_name = "\u{1}_GetWorldToScreen"]
    pub fn GetWorldToScreen(position: Vector3, camera: Camera3D) -> Vector2;
}
extern "C" {
    #[link_name = "\u{1}_GetCameraMatrix"]
    pub fn GetCameraMatrix(camera: Camera3D) -> Matrix;
}
extern "C" {
    #[link_name = "\u{1}_SetTargetFPS"]
    pub fn SetTargetFPS(fps: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_GetFPS"]
    pub fn GetFPS() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetFrameTime"]
    pub fn GetFrameTime() -> f32;
}
extern "C" {
    #[link_name = "\u{1}_GetTime"]
    pub fn GetTime() -> f64;
}
extern "C" {
    #[link_name = "\u{1}_ColorToInt"]
    pub fn ColorToInt(color: Color) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_ColorNormalize"]
    pub fn ColorNormalize(color: Color) -> Vector4;
}
extern "C" {
    #[link_name = "\u{1}_ColorToHSV"]
    pub fn ColorToHSV(color: Color) -> Vector3;
}
extern "C" {
    #[link_name = "\u{1}_ColorFromHSV"]
    pub fn ColorFromHSV(hsv: Vector3) -> Color;
}
extern "C" {
    #[link_name = "\u{1}_GetColor"]
    pub fn GetColor(hexValue: ::std::os::raw::c_int) -> Color;
}
extern "C" {
    #[link_name = "\u{1}_Fade"]
    pub fn Fade(color: Color, alpha: f32) -> Color;
}
extern "C" {
    #[link_name = "\u{1}_SetConfigFlags"]
    pub fn SetConfigFlags(flags: ::std::os::raw::c_uchar);
}
extern "C" {
    #[link_name = "\u{1}_SetTraceLogLevel"]
    pub fn SetTraceLogLevel(logType: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_SetTraceLogExit"]
    pub fn SetTraceLogExit(logType: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_SetTraceLogCallback"]
    pub fn SetTraceLogCallback(callback: TraceLogCallback);
}
extern "C" {
    #[link_name = "\u{1}_TraceLog"]
    pub fn TraceLog(logType: ::std::os::raw::c_int, text: *const ::std::os::raw::c_char, ...);
}
extern "C" {
    #[link_name = "\u{1}_TakeScreenshot"]
    pub fn TakeScreenshot(fileName: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "\u{1}_GetRandomValue"]
    pub fn GetRandomValue(
        min: ::std::os::raw::c_int,
        max: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_FileExists"]
    pub fn FileExists(fileName: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsFileExtension"]
    pub fn IsFileExtension(
        fileName: *const ::std::os::raw::c_char,
        ext: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_GetExtension"]
    pub fn GetExtension(fileName: *const ::std::os::raw::c_char) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_GetFileName"]
    pub fn GetFileName(filePath: *const ::std::os::raw::c_char) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_GetFileNameWithoutExt"]
    pub fn GetFileNameWithoutExt(
        filePath: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_GetDirectoryPath"]
    pub fn GetDirectoryPath(
        fileName: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_GetWorkingDirectory"]
    pub fn GetWorkingDirectory() -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_GetDirectoryFiles"]
    pub fn GetDirectoryFiles(
        dirPath: *const ::std::os::raw::c_char,
        count: *mut ::std::os::raw::c_int,
    ) -> *mut *mut ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_ClearDirectoryFiles"]
    pub fn ClearDirectoryFiles();
}
extern "C" {
    #[link_name = "\u{1}_ChangeDirectory"]
    pub fn ChangeDirectory(dir: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsFileDropped"]
    pub fn IsFileDropped() -> bool;
}
extern "C" {
    #[link_name = "\u{1}_GetDroppedFiles"]
    pub fn GetDroppedFiles(count: *mut ::std::os::raw::c_int) -> *mut *mut ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_ClearDroppedFiles"]
    pub fn ClearDroppedFiles();
}
extern "C" {
    #[link_name = "\u{1}_GetFileModTime"]
    pub fn GetFileModTime(fileName: *const ::std::os::raw::c_char) -> ::std::os::raw::c_long;
}
extern "C" {
    #[link_name = "\u{1}_StorageSaveValue"]
    pub fn StorageSaveValue(position: ::std::os::raw::c_int, value: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_StorageLoadValue"]
    pub fn StorageLoadValue(position: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_OpenURL"]
    pub fn OpenURL(url: *const ::std::os::raw::c_char);
}
extern "C" {
    #[link_name = "\u{1}_IsKeyPressed"]
    pub fn IsKeyPressed(key: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsKeyDown"]
    pub fn IsKeyDown(key: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsKeyReleased"]
    pub fn IsKeyReleased(key: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsKeyUp"]
    pub fn IsKeyUp(key: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_GetKeyPressed"]
    pub fn GetKeyPressed() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_SetExitKey"]
    pub fn SetExitKey(key: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_IsGamepadAvailable"]
    pub fn IsGamepadAvailable(gamepad: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsGamepadName"]
    pub fn IsGamepadName(
        gamepad: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_GetGamepadName"]
    pub fn GetGamepadName(gamepad: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_IsGamepadButtonPressed"]
    pub fn IsGamepadButtonPressed(
        gamepad: ::std::os::raw::c_int,
        button: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsGamepadButtonDown"]
    pub fn IsGamepadButtonDown(
        gamepad: ::std::os::raw::c_int,
        button: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsGamepadButtonReleased"]
    pub fn IsGamepadButtonReleased(
        gamepad: ::std::os::raw::c_int,
        button: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsGamepadButtonUp"]
    pub fn IsGamepadButtonUp(gamepad: ::std::os::raw::c_int, button: ::std::os::raw::c_int)
        -> bool;
}
extern "C" {
    #[link_name = "\u{1}_GetGamepadButtonPressed"]
    pub fn GetGamepadButtonPressed() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetGamepadAxisCount"]
    pub fn GetGamepadAxisCount(gamepad: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetGamepadAxisMovement"]
    pub fn GetGamepadAxisMovement(
        gamepad: ::std::os::raw::c_int,
        axis: ::std::os::raw::c_int,
    ) -> f32;
}
extern "C" {
    #[link_name = "\u{1}_IsMouseButtonPressed"]
    pub fn IsMouseButtonPressed(button: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsMouseButtonDown"]
    pub fn IsMouseButtonDown(button: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsMouseButtonReleased"]
    pub fn IsMouseButtonReleased(button: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_IsMouseButtonUp"]
    pub fn IsMouseButtonUp(button: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_GetMouseX"]
    pub fn GetMouseX() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetMouseY"]
    pub fn GetMouseY() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetMousePosition"]
    pub fn GetMousePosition() -> Vector2;
}
extern "C" {
    #[link_name = "\u{1}_SetMousePosition"]
    pub fn SetMousePosition(x: ::std::os::raw::c_int, y: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_SetMouseOffset"]
    pub fn SetMouseOffset(offsetX: ::std::os::raw::c_int, offsetY: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_SetMouseScale"]
    pub fn SetMouseScale(scaleX: f32, scaleY: f32);
}
extern "C" {
    #[link_name = "\u{1}_GetMouseWheelMove"]
    pub fn GetMouseWheelMove() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetTouchX"]
    pub fn GetTouchX() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetTouchY"]
    pub fn GetTouchY() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetTouchPosition"]
    pub fn GetTouchPosition(index: ::std::os::raw::c_int) -> Vector2;
}
extern "C" {
    #[link_name = "\u{1}_SetGesturesEnabled"]
    pub fn SetGesturesEnabled(gestureFlags: ::std::os::raw::c_uint);
}
extern "C" {
    #[link_name = "\u{1}_IsGestureDetected"]
    pub fn IsGestureDetected(gesture: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[link_name = "\u{1}_GetGestureDetected"]
    pub fn GetGestureDetected() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetTouchPointsCount"]
    pub fn GetTouchPointsCount() -> ::std::os::raw::c_int;
}
extern "C" {
    #[link_name = "\u{1}_GetGestureHoldDuration"]
    pub fn GetGestureHoldDuration() -> f32;
}
extern "C" {
    #[link_name = "\u{1}_GetGestureDragVector"]
    pub fn GetGestureDragVector() -> Vector2;
}
extern "C" {
    #[link_name = "\u{1}_GetGestureDragAngle"]
    pub fn GetGestureDragAngle() -> f32;
}
extern "C" {
    #[link_name = "\u{1}_GetGesturePinchVector"]
    pub fn GetGesturePinchVector() -> Vector2;
}
extern "C" {
    #[link_name = "\u{1}_GetGesturePinchAngle"]
    pub fn GetGesturePinchAngle() -> f32;
}
extern "C" {
    #[link_name = "\u{1}_SetCameraMode"]
    pub fn SetCameraMode(camera: Camera3D, mode: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_UpdateCamera"]
    pub fn UpdateCamera(camera: *mut Camera3D);
}
extern "C" {
    #[link_name = "\u{1}_SetCameraPanControl"]
    pub fn SetCameraPanControl(panKey: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_SetCameraAltControl"]
    pub fn SetCameraAltControl(altKey: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_SetCameraSmoothZoomControl"]
    pub fn SetCameraSmoothZoomControl(szKey: ::std::os::raw::c_int);
}
extern "C" {
    #[link_name = "\u{1}_SetCameraMoveControls"]
    pub fn SetCameraMoveControls(
        frontKey: ::std::os::raw::c_int,
        backKey: ::std::os::raw::c_int,
        rightKey: ::std::os::raw::c_int,
        leftKey: ::std::os::raw::c_int,
        upKey: ::std::os::raw::c_int,
        downKey: ::std::os::raw::c_int,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawPixel"]
    pub fn DrawPixel(posX: ::std::os::raw::c_int, posY: ::std::os::raw::c_int, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawPixelV"]
    pub fn DrawPixelV(position: Vector2, color: Color);
}
extern "C" {
    #[link_name = "\u{1}_DrawLine"]
    pub fn DrawLine(
        startPosX: ::std::os::raw::c_int,
        startPosY: ::std::os::raw::c_int,
        endPosX: ::std::os::raw::c_int,
        endPosY: ::std::os::raw::c_int,
        color: Color,
    );
}
extern "C" {
    #[link_name = "\u{1}_DrawLineV"]
    pub fn DrawLineV(startPos: Vector2, endPos: Vector2, color: Color);
}
